[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/NpcRigid.gd" type="Script" id=1]
[ext_resource path="res://assets/char1.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/char2.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/char4.tres" type="SpriteFrames" id=4]
[ext_resource path="res://assets/char5.tres" type="SpriteFrames" id=5]
[ext_resource path="res://assets/char6.tres" type="SpriteFrames" id=6]

[sub_resource type="PhysicsMaterial" id=27]
friction = 0.0
bounce = 0.2

[sub_resource type="CircleShape2D" id=29]
radius = 4.0

[sub_resource type="CircleShape2D" id=28]
radius = 3.0

[node name="NpcRigid" type="RigidBody2D" groups=["npcs"]]
collision_layer = 3
collision_mask = 3
mode = 2
mass = 0.1
physics_material_override = SubResource( 27 )
gravity_scale = 0.0
can_sleep = false
linear_damp = 10.0
script = ExtResource( 1 )

[node name="Anim1" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 2 )
animation = "down"
frame = 2

[node name="Anim2" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 3 )
animation = "down"
frame = 3

[node name="Anim3" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 5 )
animation = "down"

[node name="Anim4" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 4 )
animation = "down"

[node name="Anim5" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 6 )
animation = "down"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 28 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
